<resources>
    <string name="app_name">Run Analyser</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_about_me">AboutMeActivity</string>
    <string name="profile_image_desc">Creator profile image</string>
    <string name="creator_name">Guy Spialter</string>
    <string name="creator_title">Android Developer and Designer</string>
    <string name="bio_section">About Me</string>
    <string name="creator_bio">Passionate Android developer with 5+ years of experience creating beautiful and functional mobile applications. I specialize in Kotlin, Jetpack Compose, and clean architecture. When I\'m not coding, you can find me hiking or reading sci-fi novels.</string>
    <string name="contact_section">Contact</string>
    <string name="creator_email">notputingmyemail@example.fake</string>
    <string name="creator_website">janedev.com</string>
    <string name="social_section">Connect with Me</string>
    <string name="app_info_text">App Version 1.0 • © 2023</string>
</resources>